--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "yishuixm/sms",
-  "description": "malim session widget v1.0.1",
+  "name": "yishuixm/sms-ht3g",
+  "description": "sms-ht3g v1.0.1",
   "license": "MIT",
   "keywords": ["sms"],
   "version": "1.0.1",
