--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "keywords": ["sms"],
   "version": "1.0.1",
+
   "authors": [
     {
       "name": "yishuixm",
@@ -11,7 +12,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5.0"
+    "php": ">=5.5.0",
+    "another-vendor/package": "1.*"
   },
 
   "autoload": {
