--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5.0"
+    "php": ">=5.5.0",
+    "another-vendor/package": "1.*"
   },
 
   "autoload": {
