--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     }
   ],
   "require": {
-    "php": ">=5.5.0",
-    "another-vendor/package": "1.*"
+    "php": ">=5.5.0"
   },
 
   "autoload": {
